--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -1,5 +1,5 @@
-# Sample workflow for building and deploying a Jekyll site to GitHub Pages
-name: Deploy Jekyll with GitHub Pages dependencies preinstalled
+# Simple workflow for deploying static content to GitHub Pages
+name: Deploy static content to Github Pages
 
 on:
   # Runs on pushes targeting the default branch
@@ -22,30 +22,42 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  # Build job
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-      - name: Build with Jekyll
-        uses: actions/jekyll-build-pages@v1
-        with:
-          source: ./
-          destination: ./_site
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-
-  # Deployment job
+  # Single deploy job since we're just deploying
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: build
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+      - name: List HTML Files
+        run: |
+          find ./site -type f -name "*.html"
+      # Add custom steps for string replacement
+      - name: Replace urls in HTML files
+        run: |
+          find ./site -type f -name "*.html" -exec sed -i 's|"/|"/web-toolbox/|g' {} +
+          find ./site -type f -name "*.html" -exec sed -i 's|\.html||g' {} +
+      # https://stackoverflow.com/a/61560798
+      - name: Echo the combined string
+        run: echo "/${GITHUB_REPOSITORY#*/}"
+        shell: bash
+      - name: Replace <ProjectNamePlaceHolder> in main.js
+        run: |
+          sed -i "0,/<ProjectNamePlaceHolder>/s//\/${GITHUB_REPOSITORY#*/}/" site/js/main.js
+      - name: Replace urls in JS files
+        run: |
+          find ./site/components -type f -name "*.js" -exec sed -i 's|"/|"/web-toolbox/|g' {} +
+          find ./site/components -type f -name "*.js" -exec sed -i 's|/index.html|/|g' {} +;
+          find ./site/components -type f -name "*.js" -exec sed -i 's|\.html||g' {} +
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v2
+        with:
+          # Upload entire repository
+          path: './site'
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4
+        uses: actions/deploy-pages@v2
